# cactus

./: .env.sample  .gitignore  README.md  compose.yaml
backend/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
backend/app/: gunicorn_conf.py  prestart.sh
backend/app/app/: generate_reel.py  logger_utils.py  main.py  middleware.py  models.py
frontend/: .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  server.js
frontend/app/: main.py
frontend/cactus/: index.html  package-lock.json  package.json
frontend/cactus/src/: App.jsx  index.css  main.jsx
frontend/cactus/src/component/: navbar.jsx
frontend/instrumented/: InputForm.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  InputForm.css  InputForm.js  SummarizeVideo.css  SummarizeVideo.js  VideoUrlUploadForm.js
frontend/src/components/: fileupload.jsx  fileupload.module.css  travel.jsx  travel.module.css
