[tool.poetry]
name = "cactus-frontend"
version = "0.1.0"
description = "Frontend for Resynch"
authors = ["Saurabh Ghanekar <ghanekarsaurabh8@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/Dexter2389/cactus"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiofiles = "^23.2.1"
aiohttp = "^3.9.5"
streamlit = "^1.35.0"
asgiref = "^3.8.1"
streamlit-player = "^0.1.5"
st-social-media-links = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
